Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
        "  <th>Date:</th>             <td>Sun, 05 May 2019</td> <th>  Prob (F-statistic):</th> <td>5.08e-153</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>18:33:32</td>     <th>  Log-Likelihood:    </th> <td> -1458.2</td> \n",
+       "  <th>Time:</th>                 <td>22:08:54</td>     <th>  Log-Likelihood:    </th> <td> -1458.2</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   506</td>      <th>  AIC:               </th> <td>   2942.</td> \n",
@@ -369,9 +369,9 @@
        "  <th>Skew:</th>          <td> 0.891</td>  <th>  Prob(JB):          </th> <td>1.48e-94</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 7.162</td>  <th>  Cond. No.          </th> <td>4.11e+16</td>\n",
+       "  <th>Kurtosis:</th>      <td> 7.162</td>  <th>  Cond. No.          </th> <td>5.67e+16</td>\n",
        "</tr>\n",
-       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The smallest eigenvalue is 1.29e-29. This might indicate that there are<br/>strong multicollinearity problems or that the design matrix is singular."
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The smallest eigenvalue is 6.79e-30. This might indicate that there are<br/>strong multicollinearity problems or that the design matrix is singular."
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
@@ -382,7 +382,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.774\n",
        "Method:                 Least Squares   F-statistic:                     144.9\n",
        "Date:                Sun, 05 May 2019   Prob (F-statistic):          5.08e-153\n",
-       "Time:                        18:33:32   Log-Likelihood:                -1458.2\n",
+       "Time:                        22:08:54   Log-Likelihood:                -1458.2\n",
        "No. Observations:                 506   AIC:                             2942.\n",
        "Df Residuals:                     493   BIC:                             2997.\n",
        "Df Model:                          12                                         \n",
@@ -409,12 +409,12 @@
        "Omnibus:                      106.730   Durbin-Watson:                   1.093\n",
        "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              432.101\n",
        "Skew:                           0.891   Prob(JB):                     1.48e-94\n",
-       "Kurtosis:                       7.162   Cond. No.                     4.11e+16\n",
+       "Kurtosis:                       7.162   Cond. No.                     5.67e+16\n",
        "==============================================================================\n",
        "\n",
        "Warnings:\n",
        "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-       "[2] The smallest eigenvalue is 1.29e-29. This might indicate that there are\n",
+       "[2] The smallest eigenvalue is 6.79e-30. This might indicate that there are\n",
        "strong multicollinearity problems or that the design matrix is singular.\n",
        "\"\"\""
       ]
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "0.7791099696256594"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,30 +665,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[8.177858391539015,\n",
-       " -1.953802330561798,\n",
-       " -0.8045754861251448,\n",
-       " 2.5958677625178295,\n",
-       " 2.646571110631747,\n",
-       " 0.07939726661292662,\n",
-       " -10.096184652632449,\n",
-       " -1.4866659887724463,\n",
-       " 3.841213903133075,\n",
-       " -5.628793689508367,\n",
-       " -0.6689815864400226,\n",
-       " 0.668981586440023,\n",
-       " 1.1352793328846693,\n",
-       " -0.12449678699860615,\n",
-       " -1.010782545886069]"
+       "[8.177858391539033,\n",
+       " -1.9538023305617755,\n",
+       " -0.8045754861251483,\n",
+       " 2.5958677625178206,\n",
+       " 2.6465711106317458,\n",
+       " 0.07939726661292537,\n",
+       " -10.096184652632473,\n",
+       " -1.4866659887724487,\n",
+       " 3.8412139031330734,\n",
+       " -5.628793689508368,\n",
+       " -0.6689815864400218,\n",
+       " 0.66898158644002,\n",
+       " 1.1352793328846733,\n",
+       " -0.12449678699860349,\n",
+       " -1.010782545886073]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "15"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        "15"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,16 +774,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fa1ccf88be0>"
+       "<matplotlib.collections.PathCollection at 0x7f7d91471da0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
