--- a/index.ipynb
+++ b/index.ipynb
@@ -843,23 +843,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ -1.95380233  -0.80457549   2.59586776   2.64657111   0.07939727\n",
-      "  -10.09618465  -1.48666599   3.8412139   -5.62879369  -0.66898159\n",
-      "    0.66898159   2.14606188   0.88628576]]\n",
-      "[7.16707585]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "linreg = LinearRegression()\n",
-    "linreg.fit(boston_features.drop([\"TAX_(360, 712]\"], axis=1),medv)\n",
+    "linreg.fit(boston_features.drop([\"RAD_(0, 6]\"], axis=1),medv)\n",
     "\n",
     "# coefficients\n",
     "print(linreg.coef_)\n",
