Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -852,14 +852,14 @@
      "text": [
       "[[ -1.95380233  -0.80457549   2.59586776   2.64657111   0.07939727\n",
       "  -10.09618465  -1.48666599   3.8412139   -5.62879369  -0.66898159\n",
-      "    0.66898159   2.14606188   0.88628576]]\n",
-      "[7.16707585]\n"
+      "    0.66898159   1.13527933  -0.12449679  -1.01078255]]\n",
+      "[8.17785839]\n"
      ]
     }
    ],
    "source": [
     "linreg = LinearRegression()\n",
-    "linreg.fit(boston_features.drop([\"TAX_(360, 712]\"], axis=1),medv)\n",
+    "linreg.fit(boston_features.drop([], axis=1),medv)\n",
     "\n",
     "# coefficients\n",
     "print(linreg.coef_)\n",
