Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -859,7 +859,7 @@
    ],
    "source": [
     "linreg = LinearRegression()\n",
-    "linreg.fit(boston_features.drop([\"RAD_(6, 24]\", \"TAX_(360, 712]\"], axis=1),medv)\n",
+    "linreg.fit(boston_features.drop([\"TAX_(270, 360]\", \"TAX_(360, 712]\"], axis=1),medv)\n",
     "\n",
     "# coefficients\n",
     "print(linreg.coef_)\n",
