--- a/index.ipynb
+++ b/index.ipynb
@@ -932,7 +932,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Higher pupil-teacher ratios and "
+   ]
   },
   {
    "cell_type": "markdown",
