Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -933,7 +933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Higher pupil-teacher ratios and higher percentages of lower status"
+    "Higher pupil-teacher ratios and higher percentages of lower status of the population decrease median home values."
    ]
   },
   {
