--- a/index.ipynb
+++ b/index.ipynb
@@ -1005,6 +1005,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = boston_features[\"AGE\"]\n",
+    "b = boston_features[\"B\"]\n",
+    "logcrim = np.log(boston_features[\"CRIM\"])\n",
+    "logdis = np.log(boston_features[\"DIS\"])\n",
+    "logindus = np.log(boston_features[\"INDUS\"])\n",
+    "loglstat = np.log(boston_features[\"LSTAT\"])\n",
+    "logptratio = np.log(boston_features[\"PTRATIO\"])\n",
+    "\n",
+    "# minmax scaling\n",
+    "boston_features[\"B\"] = (b-min(b))/(max(b)-min(b))\n",
+    "boston_features[\"CRIM\"] = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim))\n",
+    "boston_features[\"DIS\"] = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
+    "\n",
+    "#standardization\n",
+    "boston_features[\"AGE\"] = (age-np.mean(age))/np.sqrt(np.var(age))\n",
+    "boston_features[\"INDUS\"] = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
+    "boston_features[\"LSTAT\"] = (loglstat-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
+    "boston_features[\"PTRATIO\"] = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
