Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -982,7 +982,7 @@
    "source": [
     "# first, create bins for based on the values observed. 3 values will result in 2 bins\n",
     "bins = [0,6,  24]\n",
-    "bins_rad = pd.cut([boston_features['RAD']], bins)\n",
+    "bins_rad = pd.cut([8], bins)\n",
     "bins_rad = bins_rad.cat.as_unordered()\n",
     "\n",
     "# first, create bins for based on the values observed. 4 values will result in 3 bins\n",
