Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -987,7 +987,7 @@
     "\n",
     "# first, create bins for based on the values observed. 4 values will result in 3 bins\n",
     "bins = [0, 270, 360, 712]\n",
-    "bins_tax = pd.cut(boston_features['TAX'], bins)\n",
+    "bins_tax = pd.cut([284], bins)\n",
     "bins_tax = bins_tax.cat.as_unordered()\n",
     "\n",
     "tax_dummy = pd.get_dummies(bins_tax, prefix=\"TAX\")\n",
