Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1009,7 +1009,7 @@
     "logptratio = np.log(boston_features[\"PTRATIO\"])\n",
     "\n",
     "# minmax scaling\n",
-    "boston_features[\"B\"] = (b-min(b))/(max(b)-min(b))\n",
+    "b = (b-min(b))/(max(b)-min(b))\n",
     "boston_features[\"CRIM\"] = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim))\n",
     "boston_features[\"DIS\"] = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
     "\n",
