--- a/index.ipynb
+++ b/index.ipynb
@@ -1014,8 +1014,8 @@
     "dis = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
     "\n",
     "#standardization\n",
-    "boston_features[\"AGE\"] = (age-np.mean(age))/np.sqrt(np.var(age))\n",
-    "boston_features[\"INDUS\"] = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
+    "age = (age-np.mean(age))/np.sqrt(np.var(age))\n",
+    "indus = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
     "boston_features[\"LSTAT\"] = (loglstat-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
     "boston_features[\"PTRATIO\"] = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
    ]
