Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1016,8 +1016,8 @@
     "#standardization\n",
     "age = (age-np.mean(age))/np.sqrt(np.var(age))\n",
     "indus = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
-    "boston_features[\"LSTAT\"] = (loglstat-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
-    "boston_features[\"PTRATIO\"] = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
+    "lstat = (loglstat-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
+    "ptratio = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
    ]
   },
   {
