--- a/index.ipynb
+++ b/index.ipynb
@@ -1002,7 +1002,7 @@
    "source": [
     "age = 33.2\n",
     "b = 383\n",
-    "logcrim = np.log(boston_features[\"CRIM\"])\n",
+    "logcrim = np.log()\n",
     "logdis = np.log(boston_features[\"DIS\"])\n",
     "logindus = np.log(boston_features[\"INDUS\"])\n",
     "loglstat = np.log(boston_features[\"LSTAT\"])\n",
