--- a/index.ipynb
+++ b/index.ipynb
@@ -1003,8 +1003,8 @@
     "age = 33.2\n",
     "b = 383\n",
     "logcrim = np.log(0.15)\n",
-    "logdis = np.log(boston_features[\"DIS\"])\n",
-    "logindus = np.log(boston_features[\"INDUS\"])\n",
+    "logdis = np.log(7.6)\n",
+    "logindus = np.log(6.07)\n",
     "loglstat = np.log(boston_features[\"LSTAT\"])\n",
     "logptratio = np.log(boston_features[\"PTRATIO\"])\n",
     "\n",
