Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1005,7 +1005,7 @@
     "logcrim = np.log(0.15)\n",
     "logdis = np.log(7.6)\n",
     "logindus = np.log(6.07)\n",
-    "loglstat = np.log(boston_features[\"LSTAT\"])\n",
+    "loglstat = np.log(10.87)\n",
     "logptratio = np.log(boston_features[\"PTRATIO\"])\n",
     "\n",
     "# minmax scaling\n",
