Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1006,7 +1006,7 @@
     "logdis = np.log(7.6)\n",
     "logindus = np.log(6.07)\n",
     "loglstat = np.log(10.87)\n",
-    "logptratio = np.log(boston_features[\"PTRATIO\"])\n",
+    "logptratio = np.log(17)\n",
     "\n",
     "# minmax scaling\n",
     "b = (b-min(b))/(max(b)-min(b))\n",
