Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1025,7 +1025,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "linreg.predict([])"
+   ]
   },
   {
    "cell_type": "markdown",
