Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1026,6 +1026,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "boston_features.column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "linreg.predict([])"
    ]
   },
