Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1022,11 +1022,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CRIM', 'INDUS', 'CHAS', 'RM', 'AGE', 'DIS', 'PTRATIO', 'B', 'LSTAT',\n",
+       "       'RAD_(0, 6]', 'RAD_(6, 24]', 'TAX_(0, 270]', 'TAX_(270, 360]',\n",
+       "       'TAX_(360, 712]'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "boston_features.column"
+    "boston_features.columns"
    ]
   },
   {
@@ -1035,7 +1049,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linreg.predict([])"
+    "linreg.predict([crim, indus, chas, rm])"
    ]
   },
   {
