--- a/index.ipynb
+++ b/index.ipynb
@@ -1049,7 +1049,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linreg.predict([crim, indus, chas, rm, age, dis, ptratio, b, stat, ])"
+    "linreg.predict([crim, indus, chas, rm, age, dis, ptratio, b, stat, rad[0], rad[1]])"
    ]
   },
   {
