Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1008,6 +1008,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 24]]\n",
+       "Categories (2, interval[int64]): [(0, 6] < (6, 24]]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bins_rad"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -1033,15 +1054,15 @@
     "logptratio = np.log(17)\n",
     "\n",
     "# minmax scaling\n",
-    "b = (b-min(boston_features[\"B\"]))/(max(boston_features[\"B\"])-min(boston_features[\"B\"]))\n",
-    "crim = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim))\n",
-    "dis = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
+    "boston_features[\"B\"] = (b-min(b))/(max(b)-min(b))\n",
+    "boston_features[\"CRIM\"] = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim))\n",
+    "boston_features[\"DIS\"] = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
     "\n",
     "#standardization\n",
-    "age = (age-np.mean(age))/np.sqrt(np.var(age))\n",
-    "indus = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
-    "lstat = (loglstat-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
-    "ptratio = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
+    "boston_features[\"AGE\"] = (age-np.mean(age))/np.sqrt(np.var(age))\n",
+    "boston_features[\"INDUS\"] = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
+    "boston_features[\"LSTAT\"] = (loglstat-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
+    "boston_features[\"PTRATIO\"] = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
    ]
   },
   {
