Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -976,21 +976,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Categorical' object has no attribute 'cat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-4c1b2b836492>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mbins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;36m24\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mbins_rad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcut\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mbins_rad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbins_rad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_unordered\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# first, create bins for based on the values observed. 4 values will result in 3 bins\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Categorical' object has no attribute 'cat'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# first, create bins for based on the values observed. 3 values will result in 2 bins\n",
     "bins = [0,6,  24]\n",
@@ -999,31 +987,9 @@
     "# first, create bins for based on the values observed. 4 values will result in 3 bins\n",
     "bins = [0, 270, 360, 712]\n",
     "bins_tax = pd.cut([284], bins)\n",
-    "bins_tax = bins_tax.cat.as_unordered()\n",
     "\n",
     "tax_dummy = pd.get_dummies(bins_tax, prefix=\"TAX\")\n",
     "rad_dummy = pd.get_dummies(bins_rad, prefix=\"RAD\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(6, 24]]\n",
-       "Categories (2, interval[int64]): [(0, 6] < (6, 24]]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bins_rad"
    ]
   },
   {
@@ -1053,7 +1019,7 @@
     "logptratio = np.log(17)\n",
     "\n",
     "# minmax scaling\n",
-    "boston_features[\"B\"] = (b-min(b))/(max(b)-min(b))\n",
+    "b = (b-min(b))/(max(b)-min(b))\n",
     "boston_features[\"CRIM\"] = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim))\n",
     "boston_features[\"DIS\"] = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
     "\n",
