Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1020,8 +1020,8 @@
     "\n",
     "# minmax scaling\n",
     "b = (b-min(b))/(max(b)-min(b))\n",
-    "boston_features[\"CRIM\"] = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim))\n",
-    "boston_features[\"DIS\"] = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
+    "crim = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim))\n",
+    "dis = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
     "\n",
     "#standardization\n",
     "boston_features[\"AGE\"] = (age-np.mean(age))/np.sqrt(np.var(age))\n",
