Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1019,7 +1019,7 @@
     "logptratio = np.log(17)\n",
     "\n",
     "# minmax scaling\n",
-    "b = (b-min(b))/(max(b)-min(b))\n",
+    "b = (b-min(boston_features[\"B\"]))/(max(b)-min(b))\n",
     "crim = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim))\n",
     "dis = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
     "\n",
