Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1020,7 +1020,7 @@
     "\n",
     "# minmax scaling\n",
     "b = (b-min(boston_features[\"B\"]))/(max(boston_features[\"B\"])-min(boston_features[\"B\"]))\n",
-    "crim = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim))\n",
+    "crim = (logcrim-min(boston_features[\"CRIM\"]))/(max(logcrim)-min(logcrim))\n",
     "dis = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
     "\n",
     "#standardization\n",
