Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1020,8 +1020,8 @@
     "\n",
     "# minmax scaling\n",
     "b = (b-min(boston_features[\"B\"]))/(max(boston_features[\"B\"])-min(boston_features[\"B\"]))\n",
-    "crim = (logcrim-min(boston_features[\"CRIM\"]))/(max(boston_features[\"CRIM\"])-min(logcrim))\n",
-    "dis = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
+    "crim = (logcrim-min(boston_features[\"CRIM\"]))/(max(boston_features[\"CRIM\"])-min(boston_features[\"CRIM\"]))\n",
+    "dis = (logdis-min(boston_features[\"DIS\"]))/(max(logdis)-min(logdis))\n",
     "\n",
     "#standardization\n",
     "age = (age-np.mean(age))/np.sqrt(np.var(age))\n",
