Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1021,10 +1021,10 @@
     "# minmax scaling\n",
     "b = (b-min(boston_features[\"B\"]))/(max(boston_features[\"B\"])-min(boston_features[\"B\"]))\n",
     "crim = (logcrim-min(boston_features[\"CRIM\"]))/(max(boston_features[\"CRIM\"])-min(boston_features[\"CRIM\"]))\n",
-    "dis = (logdis-min(boston_features[\"DIS\"]))/(max(logdis)-min(logdis))\n",
+    "dis = (logdis-min(boston_features[\"DIS\"]))/(max(boston_features[\"DIS\"])-min(boston_features[\"DIS\"]))\n",
     "\n",
     "#standardization\n",
-    "age = (age-np.mean(age))/np.sqrt(np.var(age))\n",
+    "age = (age-np.mean(boston_features[\"DIS\"]))/np.sqrt(np.var(age))\n",
     "indus = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
     "lstat = (loglstat-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
     "ptratio = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
