Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1024,7 +1024,7 @@
     "dis = (logdis-min(boston_features[\"DIS\"]))/(max(boston_features[\"DIS\"])-min(boston_features[\"DIS\"]))\n",
     "\n",
     "#standardization\n",
-    "age = (age-np.mean(boston_features[\"DIS\"]))/np.sqrt(np.var(age))\n",
+    "age = (age-np.mean(boston_features[\"AGE\"]))/np.sqrt(np.var(boston_features[\"AGE\"]))\n",
     "indus = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
     "lstat = (loglstat-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
     "ptratio = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
