Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1025,7 +1025,7 @@
     "\n",
     "#standardization\n",
     "age = (age-np.mean(boston_features[\"AGE\"]))/np.sqrt(np.var(boston_features[\"AGE\"]))\n",
-    "indus = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
+    "indus = (logindus-np.mean(boston_features[\"INDUS\"]))/np.sqrt(np.var(logindus))\n",
     "lstat = (loglstat-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
     "ptratio = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
    ]
