--- a/index.ipynb
+++ b/index.ipynb
@@ -1026,7 +1026,7 @@
     "#standardization\n",
     "age = (age-np.mean(boston_features[\"AGE\"]))/np.sqrt(np.var(boston_features[\"AGE\"]))\n",
     "indus = (logindus-np.mean(boston_features[\"INDUS\"]))/np.sqrt(np.var(boston_features[\"INDUS\"]))\n",
-    "lstat = (loglstat-np.mean(boston_features[\"INDUS\"]))/np.sqrt(np.var(loglstat))\n",
+    "lstat = (loglstat-np.mean(boston_features[\"LSTAT\"]))/np.sqrt(np.var(boston_features[\"LSTAT\"]))\n",
     "ptratio = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
    ]
   },
