Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1027,7 +1027,7 @@
     "age = (age-np.mean(boston_features[\"AGE\"]))/np.sqrt(np.var(boston_features[\"AGE\"]))\n",
     "indus = (logindus-np.mean(boston_features[\"INDUS\"]))/np.sqrt(np.var(boston_features[\"INDUS\"]))\n",
     "lstat = (loglstat-np.mean(boston_features[\"LSTAT\"]))/np.sqrt(np.var(boston_features[\"LSTAT\"]))\n",
-    "ptratio = (logptratio-np.mean(boston_features[\"PTRATIO\"]))/(np.sqrt(np.var(logptratio)))"
+    "ptratio = (logptratio-np.mean(boston_features[\"PTRATIO\"]))/(np.sqrt(np.var(boston_features[\"PTRATIO\"])))"
    ]
   },
   {
